Adjusted navmenu to reflect correct items and states Hot fixed some issues with setup page

--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -2,16 +2,25 @@
 	<MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">
 		Home
 	</MudNavLink>
+	<MudDivider DividerType="DividerType.Middle" Light />
 	<MudNavLink Href="lists" Icon="@Icons.Material.TwoTone.AdminPanelSettings">
 		Overview
 	</MudNavLink>
-	<MudNavLink Href="counter" Icon="@Icons.Material.TwoTone.Map">
-		Map
-	</MudNavLink>
-	<MudNavLink Href="register" Icon="@Icons.Material.TwoTone.PlaylistAddCircle">
-		Register
-	</MudNavLink>
 	<MudNavLink Href="setup" Icon="@Icons.Material.TwoTone.AddBox">
 		Setup
+	</MudNavLink>
+	<MudNavLink Href="import-reservations" Icon="@Icons.Material.TwoTone.SimCardDownload">
+		Import reservations
+	</MudNavLink>
+	<MudDivider DividerType="DividerType.Middle" Light />
+	<MudNavLink Disabled Href="" Icon="@Icons.Material.Filled.CompareArrows">
+		Auto assign
+	</MudNavLink>
+	<MudNavLink Disabled Href="" Icon="@Icons.Material.TwoTone.Map">
+		Map
+	</MudNavLink>
+	<MudDivider DividerType="DividerType.Middle" Light />
+	<MudNavLink Href="register" Icon="@Icons.Material.TwoTone.PlaylistAddCircle">
+		Register
 	</MudNavLink>
 </MudNavMenu>
